--- a/PL-class-roster/PL-class-roster/Base.lproj/Main.storyboard
+++ b/PL-class-roster/PL-class-roster/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6205" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8dB-ZW-NNX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6205" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8dB-ZW-NNX">
     <dependencies>
         <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6198"/>
@@ -14,7 +14,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="lbw-V6-L1G">
@@ -28,10 +28,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="V80-iO-fdx" kind="push" identifier="personSegue" id="ntH-Ar-3Uo"/>
+                                            <segue destination="V80-iO-fdx" kind="show" identifier="personSegue" id="ntH-Ar-3Uo"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="72" width="368" height="720"/>
+                                </variation>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="I4W-zf-QAD"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="jj5-ga-1Ps"/>
@@ -56,12 +59,12 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="lbw-V6-L1G" id="gdu-ww-gMt"/>
-                        <segue destination="V80-iO-fdx" kind="push" identifier="AddPerson" id="ucB-dl-Wnm"/>
+                        <segue destination="V80-iO-fdx" kind="show" identifier="AddPerson" id="ucB-dl-Wnm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1254" y="101"/>
+            <point key="canvasLocation" x="2350.5" y="106.5"/>
         </scene>
         <!--Person View Controller-->
         <scene sceneID="uY3-ID-8Qn">
@@ -72,40 +75,122 @@
                         <viewControllerLayoutGuide type="bottom" id="ORA-um-Koz"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="D4x-9H-4t8">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="x5x-e4-BFi">
-                                <rect key="frame" x="98" y="102" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name:" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="x5x-e4-BFi">
+                                <rect key="frame" x="252" y="116" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="152" y="99" width="97" height="30"/>
+                                </variation>
                                 <connections>
                                     <outlet property="delegate" destination="V80-iO-fdx" id="55b-Pg-Mcp"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CAz-PS-lio">
-                                <rect key="frame" x="98" y="146" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CAz-PS-lio">
+                                <rect key="frame" x="252" y="160" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="152" y="143" width="97" height="100"/>
+                                </variation>
                                 <connections>
                                     <outlet property="delegate" destination="V80-iO-fdx" id="efc-FI-cff"/>
                                 </connections>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4lW-Rs-LRs">
-                                <rect key="frame" x="26" y="202" width="240" height="250"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4lW-Rs-LRs">
+                                <rect key="frame" x="180" y="216" width="240" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="ZfK-wn-UB1"/>
+                                    <constraint firstAttribute="width" constant="250" id="f3m-bH-Cxc"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="250" id="fNe-uX-hkD"/>
+                                    <constraint firstAttribute="height" constant="250" id="nyi-B3-uGH"/>
+                                    <constraint firstAttribute="height" constant="250" id="wdU-Xh-rwR"/>
+                                    <constraint firstAttribute="width" constant="240" id="x5N-jL-H0S"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="ZfK-wn-UB1"/>
+                                        <exclude reference="fNe-uX-hkD"/>
+                                        <exclude reference="nyi-B3-uGH"/>
+                                        <exclude reference="x5N-jL-H0S"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="80" y="205" width="240" height="250"/>
+                                    <mask key="constraints">
+                                        <include reference="ZfK-wn-UB1"/>
+                                        <include reference="fNe-uX-hkD"/>
+                                        <include reference="nyi-B3-uGH"/>
+                                        <include reference="x5N-jL-H0S"/>
+                                    </mask>
+                                </variation>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yyq-dL-1xh">
-                                <rect key="frame" x="31" y="501" width="231" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yyq-dL-1xh">
+                                <rect key="frame" x="185" y="513" width="231" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="231" id="Omm-pm-WOc"/>
+                                    <constraint firstAttribute="height" constant="30" id="TrY-Ct-vUB"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Change Picture">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="85" y="505" width="231" height="30"/>
+                                </variation>
                                 <connections>
                                     <action selector="changePicture:" destination="V80-iO-fdx" eventType="touchUpInside" id="0qt-WJ-y3T"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.6309815359117259" green="0.86670137049679152" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="yyq-dL-1xh" firstAttribute="centerX" secondItem="ORA-um-Koz" secondAttribute="centerX" id="0W2-Pu-ojz"/>
+                            <constraint firstAttribute="centerX" secondItem="x5x-e4-BFi" secondAttribute="centerX" id="3jg-2T-c8e"/>
+                            <constraint firstAttribute="centerY" secondItem="4lW-Rs-LRs" secondAttribute="centerY" id="4SC-l4-gwh"/>
+                            <constraint firstItem="yyq-dL-1xh" firstAttribute="centerX" secondItem="CAz-PS-lio" secondAttribute="centerX" id="4tl-ay-HFn"/>
+                            <constraint firstAttribute="centerX" secondItem="CAz-PS-lio" secondAttribute="centerX" id="8gc-mg-LBG"/>
+                            <constraint firstItem="x5x-e4-BFi" firstAttribute="top" secondItem="PgV-GH-zK5" secondAttribute="bottom" constant="35" id="CY3-ea-tJc"/>
+                            <constraint firstItem="yyq-dL-1xh" firstAttribute="top" secondItem="4lW-Rs-LRs" secondAttribute="bottom" constant="50" id="PfE-gE-BZg"/>
+                            <constraint firstAttribute="centerX" secondItem="4lW-Rs-LRs" secondAttribute="centerX" id="SVa-dM-HKf"/>
+                            <constraint firstItem="4lW-Rs-LRs" firstAttribute="top" secondItem="CAz-PS-lio" secondAttribute="bottom" constant="32" id="Vnl-D2-mU1"/>
+                            <constraint firstItem="yyq-dL-1xh" firstAttribute="top" secondItem="4lW-Rs-LRs" secondAttribute="bottom" constant="47" id="Vxn-aI-TqP"/>
+                            <constraint firstAttribute="centerX" secondItem="yyq-dL-1xh" secondAttribute="centerX" id="av5-bj-Nfn"/>
+                            <constraint firstItem="CAz-PS-lio" firstAttribute="top" secondItem="x5x-e4-BFi" secondAttribute="bottom" constant="14" id="d7Z-eR-rVk"/>
+                            <constraint firstItem="ORA-um-Koz" firstAttribute="top" secondItem="yyq-dL-1xh" secondAttribute="bottom" constant="57" id="hYH-6C-QOF"/>
+                            <constraint firstAttribute="centerY" secondItem="4lW-Rs-LRs" secondAttribute="centerY" id="ogb-gO-FnT"/>
+                            <constraint firstAttribute="centerX" secondItem="4lW-Rs-LRs" secondAttribute="centerX" id="tOe-Rv-Snm"/>
+                            <constraint firstItem="yyq-dL-1xh" firstAttribute="centerX" secondItem="x5x-e4-BFi" secondAttribute="centerX" id="zS0-Pf-2Jo"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="3jg-2T-c8e"/>
+                                <exclude reference="CY3-ea-tJc"/>
+                                <exclude reference="4SC-l4-gwh"/>
+                                <exclude reference="SVa-dM-HKf"/>
+                                <exclude reference="Vnl-D2-mU1"/>
+                                <exclude reference="8gc-mg-LBG"/>
+                                <exclude reference="d7Z-eR-rVk"/>
+                                <exclude reference="PfE-gE-BZg"/>
+                                <exclude reference="av5-bj-Nfn"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="3jg-2T-c8e"/>
+                                <include reference="CY3-ea-tJc"/>
+                                <include reference="4SC-l4-gwh"/>
+                                <include reference="SVa-dM-HKf"/>
+                                <include reference="Vnl-D2-mU1"/>
+                                <include reference="8gc-mg-LBG"/>
+                                <include reference="d7Z-eR-rVk"/>
+                                <include reference="PfE-gE-BZg"/>
+                                <include reference="av5-bj-Nfn"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="E8v-cI-iXO"/>
                     <connections>
@@ -116,7 +201,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6E-68-v5j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1752" y="101"/>
+            <point key="canvasLocation" x="3285" y="106.69014084507042"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XaL-3l-o4G">
@@ -134,17 +219,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TT5-SW-kXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="821.33333333333337" y="101.29333333333334"/>
+            <point key="canvasLocation" x="1540" y="107"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4">
-            <size key="portraitSize" width="320" height="568"/>
-            <size key="landscapeSize" width="568" height="320"/>
-        </simulatedScreenMetrics>
-    </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="ucB-dl-Wnm"/>
     </inferredMetricsTieBreakers>
